apps/metashelf/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: metashelf
  namespace: media
spec:
  type: ClusterIP
  selector:
    app: metashelf
  ports:
    - port: 8000
      targetPort: 8000
