apps/metashelf/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: metashelf
  namespace: media
spec:
  ingressClassName: traefik
  rules:
    - host: metashelf.webernet.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: metashelf
                port:
                  number: 8000
